cadiz app back fin

--- a/plugins/rainlab/pages/classes/page/noticiasfields.yaml
+++ b/plugins/rainlab/pages/classes/page/noticiasfields.yaml
@@ -33,7 +33,7 @@ fields:
 
     viewBag[diario]:
         span: right
-        placeholder: /
+        placeholder: 'Nombre del diario'
         label: 'Nombre del diario'
 
     viewBag[descrptn]:
