--- a/plugins/rainlab/pages/classes/page/publicacionesfields.yaml
+++ b/plugins/rainlab/pages/classes/page/publicacionesfields.yaml
@@ -83,6 +83,12 @@ fields:
         default: 'default.jpg'
         cssClass: ocl     
 
+    viewBag[created_at]:
+        type: datepicker
+        default: now
+        cssClass: ocl       
+
+
 tabs:
     fields:
         #viewBag[layout]:
