Tipo De Intereses Backend . 3

--- a/modules/backend/models/tipospublicaciones/columns.yaml
+++ b/modules/backend/models/tipospublicaciones/columns.yaml
@@ -5,5 +5,5 @@
 columns:
 
     name:
-        label: Nombre del tipo de interes
+        label: Nombre del tipo de interés
         searchable: true
